[package]
name = "common-rpc-rust-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.32"

[build-dependencies]
bindgen = "0.72.1"
